fixed formatting problem with data in extended weather bar. now information is more readable

--- a/src/App.css
+++ b/src/App.css
@@ -29,17 +29,41 @@ img.logo {
     padding: 0;
     margin-top: 0;
     margin-left: 1rem;
+    margin-bottom: 0;
 }
 
 .toolbarText h1 {
     margin-bottom: 0;
 }
 
-.toolbarItem {
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
+
+.toolbarData {
+    display: flex;
+    justify-content: space-around;
 }
+
+.toolbarItem {
+    border-right: 4px solid #F2AF58;
+    padding-right: 2rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* .toolbarItem h2 {
+    margin: 0;
+    padding:0;
+} */
+
+.toolbarItem p {
+    font-size: 1.4rem;
+    margin-top: 0;
+    color: #E7F1F7;
+}
+
+
 
 .map {
     width: 100%;
@@ -74,11 +98,6 @@ img.logo {
 .closed {
     color: blue;
     transform: translateX(100%)
-}
-
-.toolbarData {
-    display: flex;
-    justify-content: space-around;
 }
 
 button {
